notepadpp 7.8.4-13:
	* product_downloader: modified detection of curl/wget
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2020-02-06 12:45:26 +0100

notepadpp 7.8.4-12:
	* product update --> 7.8.4
	* Makefile: handling of default values made more comfortable
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2020-01-30 07:27:18 +0100

notepadpp 7.8.3-11:
	* product update --> 7.8.3
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2020-01-16 08:12:33 +0100

notepadpp 7.8.2-11:
	* product update --> 7.8.2
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2019-12-06 11:29:04 +0100

notepadpp 7.8.1-11:
	* product update --> 7.8.1
	* set ActionProgess on depot server if deferring action (o4i-git issue #13)
	* package icon for deferring ($Img_Defer$)
	* helpers.opsifunc to v1.5
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2019-10-29 15:45:42 +0100

notepadpp 7.8-10:
	* product update --> 7.8
	* adjusted downloader for new project website
	* updated libLocalFunctions (helpers.opsiinc)
	-- J. Boettge <boettge@mpi-halle.mpg.de>	2019-10-17 08:05:46 +0200

notepadpp 7.7.1-9:
	* for 32 bit compatibility: use %ProgramFiles32Dir% instead of EnvVar
	* avoid empty start menu folder
	-- J. Boettge <boettge@mpi-halle.mpg.de> / Michael Decker  2019-07-16 14:22:34 +0200

notepadpp 7.7.1-8:
	* fixed setting loglevel
	* fixed search registry for uninstall keys on 32 bit systems
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-15 15:28:46 +0200

notepadpp 7.7.1-7:
	* fixed Nested Switch Statement
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-05 14:36:58 +0200

notepadpp 7.7.1-6:
	* deferring action if running instance is found (no success/error, keep action_request unchanged)
	* for language=auto (use sytem language) handle other values than 0409 and 0407 -> defaults to english
	* detect testing stage even if package has no matching prefix
	* for distinction: explicit comment in logs for TESTING / RELEASE package
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-05 13:13:20 +0200

notepadpp 7.7.1-5: